@@ -1,3 +1,4 @@
 [B]Version 1.1.173[/B]
 - sxyprn - fix playback (direct links)
+- hqporner - fix thumbnails
 
